# tge

./: .gitignore  README.md  display.py  engine.py  main.py  mkdocs.yml  model.py  pyproject.toml  scene.py  setup.py  test.py  util.py
docs/: index.md
scripts/: gen_ref_pages.py
tests/: a_dir.py  anim_m.py  benchmark.py  cube_ns.py  cube_p.py  cube_s.py  debug.py  fullscreen.py  head_p.py  head_s.py  isosphere_ns.py  isosphere_p.py  isosphere_s.py  model.py  monkey_ns.py  monkey_p.py  monkey_s.py  pipeline.py  pipeline_r.py  r_dir.py  sphere_p.py  taurus_ns.py  taurus_p.py  taurus_s.py  test.py  util.py
tge/: animation.py  camera.py  debug.py  display.py  engine.py  lights.py  model.py  scene.py  util.py
tge/bindings/: add.py
tge/c_lib/: makefile
tge/c_lib/src/: edge_walk.c
tgec/src/: edge_walk.c
