[tool.poetry]
name = "tge"
version = "0.1.0"
description = ""
authors = ["Jayden Edara <aedara@uw.edu>"]
readme = "README.md"
packages = [
    { include = "tge"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material = "^9.5.1"
mkdocs-gen-files = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
